<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4">

    <RelativeLayout
        android:id="@+id/rl_personal_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ui_primary">

        <TextView
            android:id="@+id/tv_personal_tip"
            style="@style/UiTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/username_label" />

        <TextView
            android:id="@+id/tv_personal_account"
            style="@style/UiTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="0dp"
            android:layout_toRightOf="@+id/tv_personal_tip"
            android:text="" />

        <TextView
            android:id="@+id/tv_personal_exit"
            style="@style/UiTopBarText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:clickable="true" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/rl_personal_top"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        >
        <LinearLayout
            android:id="@+id/myFavo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_section_card"
            android:padding="8dp">

            <TextView
                style="@style/UiTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_favorite" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp"
                android:layout_marginTop="0dp"
                >

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/restaurant"
                    android:textAlignment="center" />

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/window" />


                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/dish_name" />

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/price" />
            </LinearLayout>

            <ListView
                android:id="@+id/recycle_myFavo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/myOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_section_card"
            android:padding="8dp">

            <TextView
                style="@style/UiTextTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_order" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="3dp"
                android:layout_marginTop="0dp"
                >

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/restaurant"
                    android:textAlignment="center" />

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/window" />


                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/dish_name" />

                <TextView
                    style="@style/UiTextTableHeader"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/price" />
            </LinearLayout>

            <ListView
                android:id="@+id/List_myOrder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>



    </LinearLayout>

</RelativeLayout>
